# physical-ai-hack

./: .gitignore  CMakeLists.txt  README.md  arm_subscriber.cc  aws_bootstrap.sh  dataset.py  minimal_node.cc  minimal_node.cpp  package.xml
test_robot/src/gazebo_robot/: CMakeLists.txt  package.xml
test_robot/src/gazebo_robot/launch/: robot_sim.launch.py
test_robot/src/gazebo_robot/models/: simple_robot.sdf
test_robot/src/gazebo_robot/worlds/: empty.sdf
